package observer.CA1;

public interface MyListener<T> {
    void listen(T t);
}
